--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,4 @@
 home:
-  heading: "your awesome title"
-  subheading: "your awesome subheading"
+  heading: "Dee Techies"
+  subheading: "Go getters"
   banner: "your awesome url"
