--- a/_data/translate_langs.yml
+++ b/_data/translate_langs.yml
@@ -1,13 +1,15 @@
 # Translate languges
 # langs refer to https://cloud.google.com/translate/docs/languages
-
+-lang: fr
+  img: https://cdn.countryflags.com/thumbs/france/flag-400.png
+  text: Kenya
 - lang: en
   img: https://cdn.countryflags.com/thumbs/united-states-of-america/flag-400.png
   text: English
 
 - lang: fr
   img: https://cdn.countryflags.com/thumbs/france/flag-400.png
-  text: French
+  text: Kenya
 
 - lang: zh-CN
   img: https://cdn.countryflags.com/thumbs/china/flag-400.png
