--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,4 @@
 home:
-  heading: "Dee Techies"
-  subheading: "Go getters"
+  heading: "D. Cleaners"
+  subheading: "Your Cleaning Our Duty"
   banner: "your awesome url"
