--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,4 @@
 home:
-  heading: "D. Cleaners"
-  subheading: "Your Cleaning Our Duty"
+  heading: "ODHIAMBO DOREEN"
+  subheading: "Go getter"
   banner: "your awesome url"
