--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Dee Techies
+title: Odhiambo Doreen
 email: doryachie43@gmail.com
 author: Doryn
 
@@ -43,8 +43,8 @@ author: Doryn
 copyright: "Unpublished Work (cleft) 2017-{currentYear} {author}"
 
 description: >- # this means to ignore newlines until "baseurl:"
-  our biggest passion is learning about tech.We love to see things happenning
-  we shape to fit.
+  I'm Doreen ,strong in design and integration with intuitive problem solving skills.Proficient in javascript,HTML/CSS and SQL.passionate about  implementing  and launching 
+  new projects.Looking to start career as an entry-level software developer with a reputed firm driven technology.
 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
